<?xml version="1.0"?>
<package format="2">
  <name>urdfdom</name>
  <version>1.0.4</version>
  <description>
     core data structures and a simple XML parsers for populating the class data structures from an URDF file.
  </description>

  <maintainer email="denis@thekobi.com">Denis Cavalli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
